# motorlab

./: README.md  config.md  gbyk_exploratory.csv  pyproject.toml  requirements.txt
backup_motorlab/: __init__.py  datasets.py  gbyk.py  keypoints.py  logger.py  metrics.py  modules.py  plot.py  room.py  sessions.py  train.py
configs/: adversarial_lambda.yml  base_poses_to_location.yml  base_poses_to_location_and_spike_count.yml  base_poses_to_spike_count.yml  weight_decay.yml
docs/: config.md  gbyk.md  pg.md
investigations/: analysis_pca.ipynb  gbyk_export.ipynb  investigate_ken_20230614.ipynb  kinematics_plots.ipynb  pg.ipynb  poses_and_spike_count_to_position.ipynb  poses_to_location.ipynb  poses_to_spike_count.ipynb  position_from_poses_to_spike_count.ipynb  predicting_position_from_poses.ipynb  spike_count_to_poses.ipynb  spike_count_without_location.ipynb
motorlab/: __init__.py  config.py  data.py  datasets.py  gbyk.py  gbyk_export.py  intervals.py  keypoints.py  load.py  logger.py  main.py  metrics.py  model.py  models.py  modules.py  plot.py  plots.py  poses.py  room.py  sessions.py  spikes.py  train.py  trainers.py  utils.py  wandb.py
mymodels/: data.py  datasets.py  epoch.py  eval.py  metrics.py  modules.py  poses.py  train.py  utils.py
notebook/: posetoneuro.ipynb
notebooks/: analysing_angles.ipynb  analysis_body_representation.ipynb  analysis_pca.ipynb  analysis_pca_poses.ipynb  compare_models_weights.ipynb  comparing_position_prediction.ipynb  cosyne.ipynb  create_spike_count.ipynb  create_spk_cnt.ipynb  distances.ipynb  forge.ipynb  gbyk.ipynb  (+30 more)
(+344 files in other folders)
